--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     <h1>Welcome Dhiraj kumar</h1>
+    <a href="hello.html">Click to go hello.html file</a>
   </body>
 </html>
