updated background color
background color changed from red to pink

--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
   <head>
     <title>CSE1</title>
   </head>
-  <body style="background-color:red;">
+  <body style="background-color:pink;">
     <b>Hello Dhiraj kumar</b>
     <br>
     <a href="index.html">Click to go index File</a>
